fix: chat textbox and chat list alignmet

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,6 +81,7 @@
 	* {
 		@apply border-border;
 	}
+
 	body {
 		@apply bg-background text-foreground overflow-hidden;
 	}
@@ -102,21 +103,25 @@
 .dot:nth-child(1) {
 	animation-delay: 0s, 0s;
 }
+
 .dot:nth-child(2) {
 	animation-delay: 0.3s, 0.3s;
 }
+
 .dot:nth-child(3) {
 	animation-delay: 0.6s, 0.6s;
 }
 
 /* Existing Scaling and Fading Effect */
 @keyframes floating {
+
 	0%,
 	80%,
 	100% {
 		transform: scale(0);
 		opacity: 0.06;
 	}
+
 	40% {
 		transform: scale(1.2);
 
@@ -126,20 +131,20 @@
 
 /* New Wave-like Up-and-Down Effect */
 @keyframes wave {
+
 	0%,
 	100% {
 		transform: translateY(0);
 	}
+
 	50% {
 		transform: translateY(-10px);
 	}
 }
 
 .loader-ring {
-	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
-		var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0
-		calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
 	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
 		var(--tw-shadow, 0 0 #0000);
 }
@@ -150,4 +155,22 @@
 	background: linear-gradient(to right, rgb(219, 10, 219), rgb(43, 0, 255));
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
+}
+
+
+
+.messageInputText {
+	scrollbar-width: thin;
+	scrollbar-color: #0376c2 #E2E8F0;
+}
+
+.messageInputText::-webkit-scrollbar {
+	width: 6px;
+	height: 6px;
+}
+
+.messageInputText::-webkit-scrollbar-thumb {
+	background: linear-gradient(45deg, #ff4d4d, #ff1a1a);
+	border-radius: 6px;
+	transition: background 0.3s ease-in-out;
 }
